--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="header">
             <div class="logo-title">
-                <img src="logo-sem-fundo.png" alt="JP Agrícola" class="logo">
+                <img src="operacional-JP/ordem-compra-jpagricola./logo sem fundo.png" alt="JP Agrícola" class="logo">
                 <h1>Ordem de Compra</h1>
             </div>
             <div class="company-info">
